# lwwdg

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  library.json
.github/workflows/: build-and-test.yml
cmake/: gcc.cmake
dev/: main.c
docs/: conf.py
lwwdg/src/lwwdg/: lwwdg.c
tests/: test.c
